@@ -1,5 +1,10 @@
 2007-05-24  Manish Singh  <yosh@gimp.org>
 
+	* plug-ins/pygimp/pygimp-display.c (pygimp_display_new): return None
+	if we're passed an ID of -1, like the other GIMP object constructors.
+
+2007-05-24  Manish Singh  <yosh@gimp.org>
+
 	* plug-ins/pygimp/pygimp-display.c: remove the delete method, PyGimp
 	objects are supposed to be deleted via gimp.delete()
 
